[package]
name = "lunar-hirover"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libsecp256k1 = "0.7.0"
clarity-repl = "1.5.0"
bitcoin = { version = "0.29.2" }
rand = "0.8.5"
rand_chacha = "0.3.1"
tiny-bip39 = "1.0.0"
base-encode = "0.3.1"
tiny-keccak = { version = "2.0.0", features = ["keccak"] }
bip32 = {version="0.5.0" }
bitcoin_hashes = "0.12.0"
monero = { version = "0.18.2", default-features = false }
ed25519-dalek-bip32 = "0.1.0"
blake2 = "0.10.6"
sha2 = "0.10.6"
base58 = "0.2.0"
